# rss

./: Cargo.toml  justfile  makefile  package-lock.json  readme.md
config/: settings.toml
migrations/: 20210618_first.sql  20220220_first.sql
migrations_old/: 20210703_userIndexes.sql
queries/: all_sites.sql  article_insert.sql  articles_all.sql  articles_by_tags.sql  insert_article.sql  preferences_delete.sql  preferences_get.sql  preferences_set.sql  site_tags_get_all.sql  site_tags_upsert.sql  sites_all.sql  sites_by_id.sql  sites_delete.sql  sites_get_all.sql  sites_set.sql  subscription_fetch.sql  subscription_fetch_all.sql  user_by_id.sql  user_find.sql  user_item_fetch_all.sql  user_item_reads_insert.sql  user_subscription_fetch.sql  user_subscription_fetch_all.sql  user_subscription_insert.sql
queries_old/: subscription_fetch.sql  user_subscription_fetch.sql  user_subscription_fetch_all.sql
src/: clients.rs  main.rs  server.rs  session.rs  settings.rs  utils.rs
src/clients/: scraper.rs
src/dto/: item.rs  item_insert.rs  mod.rs  subscription.rs  user.rs  user_id.rs  user_subscription.rs
src/models/: db_item.rs  db_subscription.rs  mod.rs
src/server/: actions.rs  articles.rs  filters.rs  items.rs  login.rs  sites.rs  subscriptions.rs  tags.rs  template_utils.rs  templates.rs
src/server/from_requests/: user_id.rs  user_preferences.rs
static/: htmx.min.js  style.css  styles.css  tacit.css
templates/: all_subscriptions.html  all_subscriptions.html.j2  full_body.html  full_body.html.j2  index.html  item.html  item.html.j2  item_lite.html  login.j2
test/artifacts/: sword_feed.json
