[package]
name = "rss"
version = "0.1.0"
authors = ["Justin Miller <dragondef@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.0-beta.5"
actix-session = "0.4.1"
actix-web = {version = "4.0.0-beta.6"}
ammonia = "3.1"
askama = {version = "0.10", features = ["serde-json"]}
async-trait = "0.1"
chrono = "0.4"
color-eyre = "0.5"
config = "0.11"
derive_more = "0.99"
futures = "0.3.15"
hex = "0.4"
httpdate = "1.0"
lazy_static = "1.4"
maplit = "1.0.2"
reqwest = "0.11"
rss = "1.9"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.5", features = [ "runtime-actix-native-tls", "sqlite", "time" ] }
thiserror = "1.0"
tokio = { version = ">=1", features = ["full"] }
tracing = "0.1"
tracing-error = "0.1"
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
tiny-keccak = { version = "2.0", features = ["sha3"] }
sha3 = "0.9.1"

[profile.dev.package.backtrace]
opt-level = 3
