[package]
name = "rss"
version = "0.1.0"
authors = ["Justin Miller <dragondef@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.3.4"
actix-files = "0.6.0"
actix-session = "0.4.1"
actix-web = { version = "4" }
ammonia = "3.1"
async-trait = "0.1"
blake3 = "1.3.1"
chrono = "0.4"
color-eyre = "0.6"
config = "0.12"
derive_more = "0.99"
futures = "0.3.15"
hex = "0.4"
httpdate = "1.0"
maud = "0.23.0"
maplit = "1.0.2"
reqwest = "0.11"
rss = "2.0.0"
serde = "1.0"
serde_json = "1.0"
scraper = "0.12.0"
sqlx = { version = "0.5", features = [
    "runtime-actix-native-tls",
    "sqlite",
    "time",
] }
thiserror = "1.0"
tokio = { version = ">=1", features = ["full"] }
tokio-cron-scheduler = "0.5.0"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3.7", features = ["env-filter"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
tiny-keccak = { version = "2.0", features = ["sha3"] }
sha3 = "0.10.0"
voca_rs = "1.13.0"
lru_time_cache = "0.11.11"
actix-rt = "2.2"

[dev_dependencies]
replay-mocker = { git = "https://github.com/Blu-J/replay-mock", rev = "83c1eeaca72c6a822e4ccf07f1f547ae4567a43b" }
# replay-mocker = {path="../replay-mock"}

[profile.dev.package.backtrace]
opt-level = 3
